# fastpy-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: index.md  package.json
docs/.vitepress/: config.ts
docs/guide/: ai.md  commands.md  configuration.md  installation.md  libs.md  quick-start.md
docs/guide/libs/: cache.md  crypt.md  events.md  hash.md  http.md  mail.md  notifications.md  queue.md  storage.md
fastpy_cli/: __init__.py  ai.py  config.py  logger.py  main.py  setup.py  utils.py
fastpy_cli/libs/: __init__.py
fastpy_cli/libs/cache/: __init__.py  drivers.py  facade.py  manager.py
fastpy_cli/libs/encryption/: __init__.py  encrypter.py  facade.py
fastpy_cli/libs/events/: __init__.py  dispatcher.py  facade.py
fastpy_cli/libs/hashing/: __init__.py  facade.py  hasher.py  manager.py
fastpy_cli/libs/http/: __init__.py  client.py  facade.py
fastpy_cli/libs/mail/: __init__.py  drivers.py  facade.py  mailer.py
fastpy_cli/libs/notifications/: __init__.py  channels.py  facade.py  manager.py  notification.py
fastpy_cli/libs/queue/: __init__.py  drivers.py  facade.py  job.py  manager.py
fastpy_cli/libs/storage/: __init__.py  drivers.py  facade.py  manager.py
fastpy_cli/libs/support/: __init__.py  config.py  container.py  facade.py
homebrew/: README.md  fastpy.rb
shell/: fastpy.sh
tests/: __init__.py  conftest.py  test_ai.py  test_config.py  test_main.py  test_utils.py
