[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastpy-cli"
version = "0.1.0"
description = "Create production-ready FastAPI projects with one command"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Vutia Enterprise", email = "hello@ve.ke"}
]
maintainers = [
    {name = "Vutia Enterprise", email = "hello@ve.ke"}
]
keywords = [
    "fastapi",
    "cli",
    "project-template",
    "sqlmodel",
    "python",
    "api",
    "rest",
    "jwt",
    "authentication",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://fastpy.ve.ke"
Documentation = "https://fastpy.ve.ke"
Repository = "https://github.com/vutia-ent/fastpy"
Issues = "https://github.com/vutia-ent/fastpy/issues"
Changelog = "https://github.com/vutia-ent/fastpy/releases"

[project.scripts]
fastpy = "fastpy_cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fastpy_cli*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
