[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastpy-cli"
version = "1.1.7"
description = "Create production-ready FastAPI projects with one command"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Vutia Enterprise", email = "hello@ve.ke"}
]
maintainers = [
    {name = "Vutia Enterprise", email = "hello@ve.ke"}
]
keywords = [
    "fastapi",
    "cli",
    "project-template",
    "sqlmodel",
    "python",
    "api",
    "rest",
    "jwt",
    "authentication",
    "code-generator",
    "ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "toml>=0.10.0",
]

[project.urls]
Homepage = "https://fastpy.ve.ke"
Documentation = "https://fastpy.ve.ke"
Repository = "https://github.com/vutia-ent/fastpy-cli"
Issues = "https://github.com/vutia-ent/fastpy-cli/issues"
Changelog = "https://github.com/vutia-ent/fastpy-cli/blob/main/CHANGELOG.md"

[project.scripts]
fastpy = "fastpy_cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "respx>=0.20.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fastpy_cli*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = false
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/", "fastpy_cli/libs/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["fastpy_cli"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 70
